--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -358,32 +358,33 @@ div.scroll-container img {
     row-gap: 100px;
     column-gap: 100px;
    margin: 100px;
+   background-color: #333;
 }
 .quote{/*card*/
   width: auto;
   height: auto;
   
   /*background-blend-mode: overlay ;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);*/
-  transition: transform 0.3s ease-in-out;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+ background-color: #333;*/
   border-radius: 10px;
   overflow: hidden;
   margin: 50px;
   padding: 20px;
   flex-wrap: wrap;
   column-gap: 100px;
-  animation: show forwards;
-  animation-timeline: view();
+  /*animation: show forwards;
+  animation-timeline: view();*/
   
 }
 
-#quotehead {
-  color: blueviolet; 
+.quotes h1{
+  /*color: blueviolet; */
   font-family: 'Jost', sans-serif;
   font-size: 50px;
   text-align: center;
 }
- #quotedesc{
+ .quotes p{
   font-size: 42px;
   font-family: 'Jost', sans-serif;
   text-align: center;
@@ -391,7 +392,7 @@ div.scroll-container img {
 }
 @keyframes show {
   50% {
-    opacity: 1;
+    
     transform: translateY(-15rem);
   }
   100% {
@@ -400,7 +401,7 @@ div.scroll-container img {
   }
 }
 
-/*.quotes > *{
+.quotes span{
   display: inline;
   color: hsl(0 0% 100%/0.2) ;
   background-clip: text;
@@ -409,10 +410,22 @@ div.scroll-container img {
   background-image: linear-gradient(red,blue);
   animation: showquote linear forwards;
   animation-timeline: view();
+  animation-range: contain;
 }
+
+.quotes h1 span{
+  animation-range-start: contain 20vh;
+  animation-range-end: contain 30vh;
+}
+
+.quotes p span{
+  animation-range-start: contain 20vh;
+  animation-range-end: contain 50vh;
+}
+
 
 @keyframes showquote{
   to{
     background-size: 100% 100%;
   }
-}*/
+}
